manifests/medtracker/base/medtracker.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: medtracker
  labels:
    row-major.net/gateway-application: medtracker-dev

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: poller
  namespace: medtracker
  labels:
    app: poller
spec:
  selector:
    matchLabels:
      app: poller
  replicas: 1
  template:
    metadata:
      labels:
        app: poller
    spec:
      serviceAccountName: default
      containers:
      - name: main
        image: gcr.io/bomsync-214520/medtracker/poller:latest
        ports:
        - containerPort: 8001
        resources:
          requests:
            cpu: 250m
            ephemeral-storage: 10Mi
            memory: 512Mi
          limits:
            ephemeral-storage: 10Mi
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 10
        command:
        - /app/medtracker/cmd/poller/poller
        - --debug-listen=0.0.0.0:8001
        - --logtostderr=true
        - --data-project=medtracker-314520-data-prod
        - --sendgrid-key-secret=sendgrid-api-key
        - --recheck-period=12h

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: webui
  namespace: medtracker
  labels:
    app: webui
spec:
  selector:
    matchLabels:
      app: webui
  replicas: 1
  template:
    metadata:
      labels:
        app: webui
    spec:
      serviceAccountName: default
      containers:
      - name: main
        image: gcr.io/bomsync-214520/medtracker/webui:latest
        ports:
        - containerPort: 8000
          name: ui
        - containerPort: 8001
          name: debug
        resources:
          requests:
            cpu: 250m
            ephemeral-storage: 10Mi
            memory: 512Mi
          limits:
            ephemeral-storage: 10Mi
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 10
        command:
        - /app/medtracker/cmd/webui/webui
        - --ui-listen=0.0.0.0:8000
        - --debug-listen=0.0.0.0:8001
        - --logtostderr=true
        - --data-project=medtracker-314520-data-prod
        - --google-oauth-client-id=661674165474-bc4n829285mfe6tjc9l9gnmnar54jttj.apps.googleusercontent.com

---

kind: Service
apiVersion: v1
metadata:
  name: webui
  namespace: medtracker
  labels:
    app: webui
spec:
  type: ClusterIP
  selector:
    app: webui
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000

---

kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: webui
  namespace: medtracker
spec:
 parentRefs:
 - kind: Gateway
   namespace: infra-gateway
   name: external-http
 hostnames:
 - "medtracker.dev"
 rules:
 - backendRefs:
   - name: webui
     port: 8000
